--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-autopep8==1.6.0
-pycodestyle==2.8.0
-toml==0.10.2
+black==22.1.0
+click==8.0.4
+mypy-extensions==0.4.3
+pathspec==0.9.0
+platformdirs==2.5.1
+tomli==2.0.1
